<resources>
    <string name="app_name">Note Diary</string>
    <string name="title_notebook">Notebook</string>
    <string name="title_setting">Setting</string>
    <string name="text_splash_screen">Note Diary</string>

    <string name="text_welcome_to_app">Welcome to Note Diary</string>
    <string name="text_facebook">Facebook</string>
    <string name="text_google">Google</string>
    <string name="content">I was finally comfortable developing for android with eclipse but then Google rolled out the stable version of Android studio and ended support for eclipse so I had to switch to android studio and I was introduced to the world of Gradle.</string>

    <string name="action_reminders">Reminders</string>
    <string name="text_sub_reminders">Set writing reminders</string>

    <string name="msg_login_error">Login fails</string>
    <string name="action_security">Security code</string>
    <string name="text_sub_security">Set security code to lock the app</string>
    <string name="action_language">Language</string>
    <string name="text_sub_language">Change app language</string>
    <string name="action_logout">Logout</string>
    <string name="text_sub_logout">Logout the app</string>
    <string name="action_forget_security_code">Forget security code?</string>

    <string name="action_number_0">0</string>
    <string name="action_number_1">1</string>
    <string name="action_number_2">2</string>
    <string name="action_number_3">3</string>
    <string name="action_number_4">4</string>
    <string name="action_number_5">5</string>
    <string name="action_number_6">6</string>
    <string name="action_number_7">7</string>
    <string name="action_number_8">8</string>
    <string name="action_number_9">9</string>

    <string name="action_day_of_week_1">SUN</string>
    <string name="action_day_of_week_2">MON</string>
    <string name="action_day_of_week_3">TWE</string>
    <string name="action_day_of_week_4">WED</string>
    <string name="action_day_of_week_5">THU</string>
    <string name="action_day_of_week_6">FRI</string>
    <string name="action_day_of_week_7">SAT</string>

    <string name="text_input_security">Input password security</string>
    <string name="text_cancel_security">Input password to cancel security</string>
    <string name="text_repeat_security">Repeat password security</string>


    <string name="text_email_content">Enter your email to remind security code, in case you forget it</string>
    <string name="action_disagree">DISAGREE</string>
    <string name="action_agree">AGREE</string>
    <string name="msg_email_matchs">Email is empty or matches</string>
    <string name="msg_password_error">Password not matches</string>
    <string name="text_reminder_content">Setting time and weekdays when you want to be notified to write in Note Diary</string>

    <string name="action_turn_on_reminder">Turn on</string>
    <string name="action_turn_off_reminder">Turn off</string>

    <string name="facebook_app_id">1825962241020545</string>
    <string name="fb_login_protocol_scheme">fb1825962241020545</string>

    <string name="server_client_id">84423249164-t3rk0r53k5225hnl0tq4rooas2iut270.apps.googleusercontent.com</string>

    <string name="title_note_creation">Create Notebook</string>
    <string name="hint_title_notebook">Entry title…</string>
    <string name="hint_text_notebook">Entry content…</string>
    <string name="action_pick_image">Pick image</string>
    <string name="title_albums">Albums</string>

    <!-- Request permission-->
    <string name="msg_denied_read_storage_external">You denied permission read storage external</string>
    <string name="msg_permission_request_read_storage_external">Please, grant permission read external sdcard to show picure.</string>

    <string name="msg_device_not_support_camera">Your device do not support camera</string>
    <string name="msg_denied_camera">You denied permission camera</string>
    <string name="msg_permission_request_camera">Please, grant permission camera to capture image.</string>

    <string name="msg_denied_access_fine_location">You denied permission access fine location address</string>
    <string name="msg_permission_request_access_fine_location">Please, grant permission access fine location to get current place address.</string>

    <string name="msg_device_not_support_place_address">Device not support get location place address</string>

    <string name="msg_load_data_error">Load data error</string>
    <string name="msg_delete_image">You have deleted some pictures</string>
    <string name="msg_load_current_address_error">Get current address fault</string>

    <!--location-->
    <string name="msg_not_receiver">No receiver received. There is nowhere to send the results.</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="no_address_found">Sorry, no address found</string>
    <string name="address_found">Address found</string>
    <string name="text_album_name">Note_Diary</string>
</resources>
