<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools"
    >

    <data>

        <variable
            name="viewModel"
            type="com.nhahv.note.screen.login.LoginViewModel"
            />
        <import type="com.nhahv.note.util.Font"/>
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_activity_login"
        android:orientation="vertical"
        >

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_160"
            android:gravity="center"
            android:text="@string/text_welcome_to_app"
            android:textColor="@color/color_white"
            android:textSize="@dimen/sp_46"
            bind:font="@{Font.CALLIGRAPHY}"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="@dimen/dp_56"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            >

            <FrameLayout
                android:id="@+id/relative_facebook"
                android:layout_width="@dimen/dp_240"
                android:layout_height="@dimen/dp_50"
                android:addStatesFromChildren="true"
                android:background="@drawable/state_action_login"
                android:clickable="true"
                android:focusable="true"
                android:onClick="@{() -> viewModel.onFacebookStartMain()}"
                >

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:layout_marginStart="@dimen/dp_20"
                    app:srcCompat="@drawable/ic_facebook_white"
                    />
                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/text_facebook"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/sp_20"
                    />
            </FrameLayout>

            <RelativeLayout
                android:layout_width="@dimen/dp_240"
                android:layout_height="@dimen/dp_50"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_16"
                android:addStatesFromChildren="true"
                android:background="@drawable/state_action_login"
                android:clickable="true"
                android:focusable="true"
                android:onClick="@{() -> viewModel.onGoogleStartMain()}"
                >

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dp_20"
                    android:layout_marginStart="@dimen/dp_20"
                    app:srcCompat="@drawable/ic_google_white"
                    />
                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:gravity="center"
                    android:text="@string/text_google"
                    android:textColor="@color/color_white"
                    android:textSize="@dimen/sp_20"
                    />
            </RelativeLayout>
        </LinearLayout>
    </android.support.design.widget.CoordinatorLayout>
</layout>
